# ebook-name-from-metadata

./: Cargo.toml  README.md
src/: main.rs
